add/sub items from cart

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -65,3 +65,11 @@ body {
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
 }
+
+.layout {
+    view-transition-name: layout;
+}
+
+::view-transition-group(layout) {
+    z-index: 100;
+}
